test/tests/compiler/5_local_variables/valid/assign.plx
pub fn main(none) i32 {
    var0: i32;
    var0 = 2
    return var0
}
