test/tests/compiler/5_local_variables/invalid_semantics/declared_after_use.plx
pub fn main(none) i32 {
    a = 1 + 2
    a: i32;
    return a
}
